...
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="16dp"
      android:fillViewport="true"
      android:fitsSystemWindows="true"
      android:scrollbars="vertical"
      app:layout_constraintBottom_toTopOf="@+id/agreeCheckBox"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/terms_toolbar">

      <TextView
        android:id="@+id/termsText"
...
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@{viewModel.termsOfServiceText}"
        android:visibility="visible" />
    </ScrollView>
    <Button
      android:id="@+id/agreeButton"
      visible="@{!isViewOnly}"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="32dp"
      android:enabled="@{viewModel.agreeCheckboxChecked}"
      android:onClick="@{() -> viewModel.onButtonClicked()}"
...
