...
          android:textColor="@color/colorPrimary"
          app:visible="@{viewModel.isLocationUpdatesEnabled()}" />
      </com.google.android.material.card.MaterialCardView>
    </FrameLayout>

    <ImageView
      android:id="@+id/map_crosshairs_img"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:adjustViewBounds="false"
      android:src="@drawable/ic_crosshairs" />
  </FrameLayout>
...
