...
        android:layout_gravity="top"
        android:orientation="vertical"
        android:paddingTop="@dimen/loi_details_header_padding_top"
        android:paddingBottom="@dimen/loi_details_header_padding_bottom">

        <TextView
          android:id="@+id/location_of_interest_title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:text="@{viewModel.title}"
          android:textAlignment="center"
          android:textAppearance="@style/TextAppearance.AppCompat.Title"
...
