<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

  <!-- Message shown while survey is loading. -->
  <string name="survey_loading_please_wait">Project loading, please wait &#8230;</string>

  <!--
    ADD/EDIT LOI DATA
  -->

  <!-- Title shown above list of jobs when (+) is clicked on map. -->
  <string name="add_loi_select_type_dialog_title">What would you like to add?</string>

  <!-- Shown in toolbar when adding a new locationOfInterest and task instance. -->
  <string name="add_loi_toolbar_title">Add a locationOfInterest</string>
  <!-- Shown in toolbar when editing an existing submission (task instance). -->
  <string name="edit_loi_data_toolbar_title">Edit locationOfInterest data</string>
  <!-- Shown in toolbar when adding a new submission (task instance) to a locationOfInterest. -->
  <string name="add_loi_data_toolbar_title">Add locationOfInterest data</string>
  <!-- Shown when leaving edit mode without saving changes. -->
  <string name="unsaved_changes">Save changes before closing?</string>
  <!--
    Shown when the user attempts to close the task without saving. If tapped, unsaved
    changes will be saved.
  -->
  <string name="continue_editing">Continue editing</string>
  <!--
    Shown when the user attempts to close the task without saving. If tapped, unsaved
    changes will be lost.
  -->
  <string name="discard_changes">Discard changes</string>
  <!-- Shown on save when connection was not available. -->
  <string name="save_queued">Saved locally, queued for sync.</string>
  <!-- Shown on save when connection is available (TBD). -->
  <string name="saved">Changes saved</string>

  <!--
    LOI DATA FORMS
  -->

  <!-- Text in multiple-choice popup dialogs that when clicked, applied new selection to task -->
  <string name="apply_multiple_choice_changes">Apply</string>
  <!-- Shown below fields that are required but left empty (TBD). -->
  <string name="required_field">This field is required</string>

  <!--
    VIEW LOI DATA
  -->

  <!-- Shown in submission overflow menu to open popup dialog to edit locationOfInterest metadata. -->
  <string name="edit_submission">Edit submission</string>
  <!-- Shown in submission overflow menu to delete a submission. -->
  <string name="delete_submission">Delete submission</string>
  <!-- Confirmation shown when deleting a submission (TBD). -->
  <string name="delete_submission_confirmation">
    This will permanently delete the selected submission. This cannot be undone. Are you sure?
  </string>
  <!--
    Shown above saved submissions (tasks) that have been submitted. %1$s placeholder will already be
    translated, and it will contain the "time ago" that the submission was received by the server
    (e.g., "Submitted 2 min ago").
   -->
  <string name="submitted_status">Submitted %1$s</string>
  <!--
    Shown above saved submissions (tasks) that have been submitted and subsequently modified. %1$s
    placeholder will already be translated, and it will contain the "time ago" that the changes were
    last received by the server (e.g., "Updated 1 min ago").
   -->
  <string name="updated_status">Updated %1$s</string>

  <!--
    IN BOTH ADD/EDIT AND VIEW LOI SCREENS
  -->

  <!-- Shown in toolbar overflow menu to enter "move" mode to reposition a locationOfInterest. -->
  <string name="move_loi">Move locationOfInterest</string>
  <!-- Shown in toolbar overflow menu to open popup dialog to edit locationOfInterest metadata. -->
  <string name="edit_loi_id_and_caption">Edit ID &amp; caption</string>
  <!-- Shown in edit id/caption popup (TBD) above locationOfInterest ID. -->
  <string name="loi_id">ID</string>
  <!-- Shown in edit id/caption popup (TBD) above locationOfInterest caption. -->
  <string name="loi_caption">Caption</string>
  <!-- Shown in toolbar overflow menu to delete a locationOfInterest and all related data. -->
  <string name="delete_loi">Delete locationOfInterest</string>
  <!-- Shown in toolbar overflow menu to delete a locationOfInterest and all related data. -->
  <string name="delete_loi_confirmation">
    This will delete the currently selected locationOfInterest and all related data. This cannot be undone.
    Are you sure?
  </string>

  <!--
    LOCATION (GPS/CELL/WIFI) UPDATE ERROR MESSAGES
  -->

  <!-- Shown when user has refused to grant app fine grained location permission. -->
  <string name="no_fine_location_permissions">Cannot show current location without
    permission</string>
  <!-- Shown when an unknown error occurs obtaining fine grained location permission. -->
  <string name="location_updates_unknown_error">Failed to enable location updates</string>
  <!-- Shown when user has refused to enable location services in settings.-->
  <string name="location_disabled_in_settings">Please enable location in system settings</string>

  <!-- Shown when saving a task that contains missing or invalid data -->
  <string name="invalid_data_warning">The task contains incomplete or invalid data. Please check
  your responses and try again.</string>
  <string name="invalid_data_confirm">OK</string>

  <string name="add_submission_button_label">Add submission</string>
  <string name="view_submission_details">View submission details</string>
  <string name="map_view">Map view</string>
  <string name="survey_load_error">Project could not be loaded</string>
  <string name="survey_list_load_error">Survey list not available</string>
  <string name="unexpected_error">An unexpected error has occurred</string>
  <string name="edit_submission_button_label">Edit</string>
  <string name="save_submission_button_label">Save</string>
  <string name="saving">Saving&#8230;</string>
  <string name="no_changes_to_save">No changes to save</string>
  <string name="select_project_menu_item">My Projects</string>
  <string name="google_api_install_failed">Google Play Services installation failed</string>
  <string name="sign_in_unsuccessful">Sign in unsuccessful</string>
  <string name="sign_out">Sign out</string>
  <string name="cancel">Cancel</string>
  <string name="join_survey">Join survey</string>
  <!-- TODO(#1146): Remove temporary button for launching data collection flow once complete  -->
  <string name="launch_collect_data">Test collect data UI</string>

  <!-- Untranslated strings -->
  <string name="offline_base_maps">Offline base maps</string>
  <string name="unknown_user">Unknown user</string>
  <string name="add_submission_toolbar_title">Add submission</string>
  <string name="offline_base_map_selector">Select area to download</string>
  <string name="offline_base_map_selector_prompt">Select a base map for offline use</string>
  <string name="offline_base_map_selector_download">Download</string>
  <string name="add_photo">Add photo</string>
  <string name="action_camera">Camera</string>
  <string name="action_storage">Storage</string>
  <string name="photo_preview">Preview</string>
  <string name="select_map_type">Select base map</string>
  <string name="uploading_photos">Uploading photos</string>
  <string name="starting">Starting</string>
  <string name="downloading_tiles">Downloading base map</string>
  <string name="in_progress">In progress</string>
  <string name="paused">Paused</string>
  <string name="completed">Completed</string>
  <string name="uploading_data">Uploading data</string>
  <string name="failed">Failed</string>
  <string name="app_running">App is running</string>
  <string name="settings">Settings</string>
  <string name="offline_base_map_viewer_navgraph_label">Offline Base Map Viewer</string>
  <string name="offline_base_map_viewer_title">Offline base map area</string>
  <string name="offline_base_map_viewer_remove_button">Remove</string>
  <string name="offline_base_map_viewer_storage">This base map takes up %.1f MB of storage space on your device.</string>
  <string name="unnamed_area">Unnamed area</string>
  <string name="offline_base_map_download_started">Download started</string>
  <string name="offline_base_map_download_failed">Base map download failed</string>
  <string name="added_by">Added by %s</string>
  <string name="move_point_confirmation">Move point to new location?</string>
  <string name="move_point_hint">Drag to pan map to new location</string>
  <string name="error_occurred">An error occurred</string>
  <!-- Label of button used enter the offline area selector. -->
  <string name="offline_base_map_selector_select">Select and download</string>
  <string name="no_basemaps_downloaded">No base maps downloaded.</string>
  <string name="signing_in">Signing in</string>
  <!-- Precedes the build number shown in the side menu of debug builds. -->
  <string name="build">Build %s</string>

  <string name="tos_title">Terms Of Service</string>
  <string name="agree_terms">Agree</string>
  <string name="agree_checkbox">I agree to the Terms of Service</string>
  <string name="date">Date</string>
  <string name="time">Time</string>
  <string name="terms_load_error">An error occurred while loading Terms of Service</string>
  <!-- Other strings (to be organized) -->
  <string name="offline_base_map_name" translatable="false">%s</string>
  <string name="sync_status">Sync status</string>
  <string name="polygon">Polygon</string>
  <string name="point">Point</string>
  <string name="layer_label_format">Job: %s</string>

  <!-- Shown in toolbar overflow menu, used to show imported locationOfInterest properties. -->
  <string name="loi_properties">LOI properties</string>
  <!-- Label on button shown to dismiss the locationOfInterest properties dialog. -->
  <string name="close_loi_properties">OK</string>
  <string name="config_load_error">Error loading config from remote server.</string>
  <string name="permission_denied_error">Permission denied! Check user pass-list.</string>

  <string name="add_point">Add point</string>
  <string name="complete_polygon">Complete</string>
  <string name="select_loi_type">Choose a locationOfInterest type</string>
  <string name="get_started_button_text">Get started</string>
  <string name="add_polygon_instructions">Drag the map and tap “Add point“ to add points to your polygon. To finish, return to the original point and tap “Complete“.</string>
  <string name="location_accuracy">Accuracy: %.2f m</string>

  <string name="delete_button_label">Delete</string>
  <string name="cancel_button_label">Cancel</string>
  <string name="submission_delete_confirmation_dialog_title">Delete this submission?"</string>
  <string name="submission_delete_confirmation_dialog_message">This submission will disappear from the map. This change cannot be undone. Are you sure?</string>
  <string name="loi_delete_confirmation_dialog_title">Delete %1$s locationOfInterest?"</string>
  <string name="loi_delete_confirmation_dialog_message">This locationOfInterest will disappear from the map along with all associated submissions. This change cannot be undone. Are you sure?</string>

  <string name="road_map">Road Map</string>
  <string name="satellite">Satellite</string>
  <string name="terrain">Terrain</string>
  <string name="map_type">Map Type</string>
  <string name="close">Close</string>

</resources>
