...
    <FrameLayout
      android:id="@+id/map"
      android:layout_width="match_parent"
      android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/map_type_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="@{() -> viewModel.onMapTypeButtonClicked()}"
      android:tint="@color/colorGrey500"
      app:backgroundTint="@color/colorBackground"
      app:fabSize="mini"
...
